      with the group
    - added Instrument::MoveRegion method
    - fixed constructor for Region, which did not initialize correctly
      when used from Instrument::AddRegion
    - when saving, override the gig::Regions sample reference simply by
      the region's first dimension region's sample (avoids an exception
      when trying to save a new instrument)

  * src/DLS.cpp, src/DLS.h:
    - added Instrument::MoveRegion method
    - fixed software info field which was wrongly stored on instruments,
      causing an exception when trying to save a new instrument

  * src/RIFF.cpp, src/RIFF.h:
    - fixed RIFF::Chunk destructor which did not unregister previously
      resized chunks, leading to a "zero size chunk" exception when
      File::Save() was called
    - added List::MoveSubChunk method

Version 3.1.0 (24 Nov 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license;
      added ldconfig to post-(un)install steps on libgig.spec (RPM)

  * src/gig.cpp, src/gig.h:
    - added support for more than one set of custom velocity splits
      inside a region (for example different velocity split levels for
      pedal up and pedal down)
    - sample loop parameters are now taken from the DimensionRegion
      instead of the wave chunk
    - keyswitching dimension is changed from split type "normal" to
      "bit"
    - real support for 24 bit samples - samples are not truncated to
      16 bits anymore
    - support for reading of ".art" files. (Merging of .art and .gig
      files are not implemented yet.)
    - several fixes for the write support
    - support for sample groups added

  * src/DLS.cpp, src/DLS.h:
    - support for reading of ".art" files
    - removed incorrect use of memccpy in the write support (patch by
      Jeremy Kerr)
    - several fixes for the write support

  * src/gigextract.cpp:
    - real support for 24 bit samples

  * src/gigdump.cpp:
    - print global file informations
    - print sample groups
